[package]
name = "tensorflow-sys"
version = "0.3.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to TensorFlow."
documentation = "https://stainless-steel.github.io/tensorflow-sys"
homepage = "https://github.com/stainless-steel/tensorflow-sys"
repository = "https://github.com/stainless-steel/tensorflow-sys"
build = "build.rs"
links = "tensorflow"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
